Work on the headers, trying to get spacing between them correct.

--- a/project01/lifestyle.css
+++ b/project01/lifestyle.css
@@ -15,13 +15,19 @@ body{
     padding-right: 10px;
 
     padding-bottom: 10px;
-    padding-top: 10px;
+    padding-top: 8px;
 }
-h5 h1 {
-
-    color: #666666;
+h6 h1 {
     margin-left: 5px;
-    height: 100%;
+    margin-bottom: 0px;
+    padding-top: -50px;
+    padding-bottom: 0px;
+}
+
+h6 {
+    color: #666666;
+    font-size: 12px;
+    margin-top: -23px;
 }
 #main {
     border-right-style: solid;
@@ -73,6 +79,7 @@ select {
     padding-left: 10px;
     padding-bottom: 13px;
     padding-top: 11px;
+    font-weight: bold;
 }
 div.internaltext, h2 {
     margin-left:10px;
@@ -101,6 +108,8 @@ div.internaltext, h2 {
     left: 50px;
     font-size: 12px;
 }
-#submit_btn {
-    left: 10px;
+#submitbtn {
+    
+    margin-left: 217px;
+    font-size: 12px;
 }
